fix: fix header offset when scrollbar is present

--- a/shelter/pages/pets/scss/_layout.scss
+++ b/shelter/pages/pets/scss/_layout.scss
@@ -19,14 +19,19 @@
 }
 
 // Header
+.header-wrapper {
+  width: 100vw;
+}
+
 .header {
   width: 100%;
-  padding-right: calc(40px - 17px); // account for scrollbar on desktop(17px)
+  padding-right: 40px;
   padding-left: 40px;
   display: flex;
   justify-content: space-between;
 
   &--pets {
+    width: inherit;
     max-width: $max-width;
     position: fixed;
     top: 0;
@@ -45,7 +50,7 @@
 
 .section {
   padding-top: 80px;
-  padding-right: calc(40px - 17px); // account for scrollbar on desktop(17px)
+  padding-right: 40px;
   padding-left: 40px;
 
   &--dark {
@@ -81,7 +86,7 @@
 // Footer
 .footer {
   padding-top: 40px;
-  padding-right: calc(40px - 17px); // account for scrollbar on desktop(17px)
+  padding-right: 40px;
   padding-left: 40px;
   background: url('../../../assets/images/main/noise_transparent@2x.png'),
     radial-gradient(100% 215.42% at 0% 0%, #5b483a 0%, #262425 100%),
